fix mobile drawer alignment

--- a/static/css/deriv/header.scss
+++ b/static/css/deriv/header.scss
@@ -84,7 +84,8 @@
                     width:100%;
                     justify-content: space-between;
                     max-width: unset;
-                    padding: 16px 0 16px 24px;
+                    padding: 16px 0 16px 48px;
+                    font-size: $FONT_SIZE_S;
                 }
             }
             &-item {
@@ -161,7 +162,11 @@
         width: 16px;
 
         &-text {
-            margin-right: 0.5rem;
+            margin-right: 8px;
+
+            @include mobile {
+                margin-right: 16px;
+            }
         }
         &-button {
             height: 20px;
@@ -197,6 +202,7 @@
         left: 0;
         position: fixed;
         z-index: 100000;
+
         &-wrapper {
             background: var(--overlay-outside-dialog);
             width: 100vw;
@@ -214,24 +220,31 @@
             line-height: 24px;
             align-items: center;
             border-bottom: 1px solid var(--general-section-2);
-            padding: 0 16px;
+
+            span {
+                font-weight: bold;
+                border-left: 1px solid var(--general-section-2);
+                padding: 8px 16px;
+                color: var(--text-general);
+            }
             
         }
         &-content{
             width: 100%;
             height: 100%;
             overflow-y: scroll;
-            padding: 0 16px 120px;
         }
         &-close{
-            margin: 0 16px;
+            margin: 0 12px;
         }
         &__platform-switcher{
-            height: 45px;
+            height: 72px;
+            min-height: 72px;
             display: flex;
             align-items: center;
-            justify-content: space-around;
-            
+            justify-content: center;
+            padding: 8px;
+            border-bottom: 1px solid var(--general-section-2);
         }
     }
     &__notification {
@@ -435,6 +448,7 @@
                 width: inherit;
                 background:unset;
                 height: unset;
+                padding: 0 16px 120px 16px;
             }
 
             &.show {
@@ -462,7 +476,7 @@
                 @include mobile{
                     width: auto;
                     margin: 14px 0;
-                    padding: 14px 0;
+                    padding: 14px 16px;
                 }
 
                 &:not(.platform__list-item--active):hover {
